<resources>
    <string name="app_name">ChatKotlin</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="check_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="back_to_register">Back to Register?</string>
    <string name="Select_image">This is a profile image selector</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="last_message">Last Message</string>
    <string name="send">SEND</string>
    <string name="message">Enter Message</string>
</resources>