<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/LoginEmailAddress"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_box"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:paddingStart="16dp"
        android:textColor="@color/primaryText"
        android:textColorHint="#B3FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/LoginPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/LoginPassword"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_box"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="8dp"
        android:paddingStart="16dp"
        android:textColor="@color/primaryText"
        android:textColorHint="#B3FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/LoginEmailAddress"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/LoginEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/LoginEmailAddress" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_button"
        android:text="@string/login"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/LoginPassword"
        app:layout_constraintStart_toStartOf="@+id/LoginPassword"
        app:layout_constraintTop_toBottomOf="@+id/LoginPassword" />

    <TextView
        android:id="@+id/return_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/back_to_register"
        android:textColor="@color/primaryText"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />
</androidx.constraintlayout.widget.ConstraintLayout>